added .stdout to debut

--- a/playbooks/docker/install-docker.yml
+++ b/playbooks/docker/install-docker.yml
@@ -97,5 +97,5 @@
     - Name: Showing version results for Docker and Docker Compose
       Debug:
         Msg:
-          - "{{ dock_ver }}"
-          - "{{ dock_com_ver }}"
+          - "{{ dock_ver.stdout }}"
+          - "{{ dock_com_ver.stdout }}"
