--- a/playbooks/base-server/3-setup-apps.yml
+++ b/playbooks/base-server/3-setup-apps.yml
@@ -18,6 +18,11 @@
           - snapd
         state: latest
 
+### Installing Canonical-Livepatch snap
+      - name: Installing Canonical-LivePatch
+        community.general.snap:
+          name: canonical-livepatch
+
 ### this step is only for me coz I deploy docker Pi-Hole on all my servers
 ### PiHole need exclusive use of Port 53
 ### By default Port 53 will be used by systemd
