commented out ansible_user and renamed hosts

--- a/hosts.yml
+++ b/hosts.yml
@@ -3,54 +3,54 @@ web1:
   hosts:
     mondskiez.com
   vars:
-    ansible_user: morty
+#    ansible_user: morty
     ansible_private_key_file: ~/.ssh/ansible
 
 web2:
   hosts:
     us.mondskiez.com
   vars:
-    ansible_user: morty
+#    ansible_user: morty
     ansible_private_key_file: ~/.ssh/ansible
 
 web3:
   hosts:
     unifi.mondskiez.com
   vars:
-    ansible_user: morty
+#    ansible_user: morty
     ansible_private_key_file: ~/.ssh/ansible
 
 web4:
   hosts:
     sfo3.mondskiez.com
   vars:
-    ansible_user: morty
+#    ansible_user: morty
     ansible_private_key_file: ~/.ssh/ansible
 
-web5:
+us22-10:
   hosts:
     10.0.0.128
   vars:
-    ansible_user: test-user
+#    ansible_user: test-user
     ansible_ssh_private_key_file: ~/.ssh/ansible
 
-web5b:
-  hosts:
-    192.168.8.128
-  vars:
-    ansible_user: morty
-    ansible_ssh_private_key_file: ~/.ssh/ansible
-
-web6:
+us24-10:
   hosts:
     10.0.0.121
   vars:
-    ansible_user: test-user
+#    ansible_user: test-user
     ansible_ssh_private_key_file: ~/.ssh/ansible
 
-web7:
+us22-192:
+  hosts:
+    192.168.8.128
+  vars:
+#    ansible_user: morty
+    ansible_ssh_private_key_file: ~/.ssh/ansible
+
+us24-192:
   hosts:
     192.168.8.121
   vars:
-    ansible_user: test-user
+#    ansible_user: test-user
     ansible_ssh_private_key_file: ~/.ssh/ansible
