--- a/playbooks/server-maintenance/livepatch.yml
+++ b/playbooks/server-maintenance/livepatch.yml
@@ -1,28 +1,23 @@
 ---
 
-      - name: Check Canonical-LivePatch Binary exists
-        shell: which canonical-livepatch
-        register: lp_location
-        ignore_errors: yes
+      # - name: Check Canonical-LivePatch Binary exists
+      #   shell: which canonical-livepatch
+      #   register: lp_location
+      #   ignore_errors: yes
 
-      - name: Canonical-LivePatch binary exists
-        debug:
-          msg: "Binary is located at {{ lp_location.stdout }}"
-        when: lp_location.stdout
+      # - name: Canonical-LivePatch binary exists
+      #   debug:
+      #     msg: "Binary is located at {{ lp_location.stdout }}"
+      #   when: lp_location.stdout
 
-      - name: Canonical-LivePatch binary does not exist
-        debug:
-          msg: "Binary is not found at /snap/bin/canonical-livepatch"
-        when: not lp_location.stdout
+      # - name: Canonical-LivePatch binary does not exist
+      #   debug:
+      #     msg: "Binary is not found at /snap/bin/canonical-livepatch"
+      #   when: not lp_location.stdout
 
-      - name: Installing Canonical-LivePatch
-        community.general.snap:
-          name: canonical-livepatch
-        register: lp_installed
-      
       - name: Retrieving default check-interval time
         shell: canonical-livepatch config | grep check | awk 'FNR == 1 {print $2}'
-        register: lp_time_before
+        register: cl_time_before
 
       - name: Updating check-interval config to desired time
         command: canonical-livepatch config check-interval={{ cl_desired_time }}
@@ -36,5 +31,5 @@
       - name: Compare check-interval times
         debug:
           msg: 
-          - "Canonical-LivePatch check-intervtime before: {{ lp_time_before.stdout }}" 
+          - "Canonical-LivePatch check-intervtime before: {{ cl_time_before.stdout }}" 
           - "Canonical-LivePatch check-interval time after: {{ cl_time_after.stdout }}"
