--- a/hosts.yml
+++ b/hosts.yml
@@ -3,42 +3,42 @@ web1:
   hosts:
     mondskiez.com
   vars:
-#    ansible_user: morty
+    ansible_user: morty
     ansible_private_key_file: ~/.ssh/ansible
 
 web2:
   hosts:
     us.mondskiez.com
   vars:
-#    ansible_user: morty
+    ansible_user: morty
     ansible_private_key_file: ~/.ssh/ansible
 
 web3:
   hosts:
     unifi.mondskiez.com
   vars:
-#    ansible_user: morty
+    ansible_user: morty
     ansible_private_key_file: ~/.ssh/ansible
 
 web4:
   hosts:
     sfo3.mondskiez.com
   vars:
-#    ansible_user: morty
+    ansible_user: morty
     ansible_private_key_file: ~/.ssh/ansible
 
 us2210:
   hosts:
     10.0.0.128
   vars:
-#    ansible_user: test-user
+    ansible_user: test-user
     ansible_ssh_private_key_file: ~/.ssh/ansible
 
 us2410:
   hosts:
     10.0.0.121
   vars:
-#    ansible_user: test-user
+    ansible_user: test-user
     ansible_ssh_private_key_file: ~/.ssh/ansible
 
 us22192:
