--- a/playbooks/base-server/3-setup-apps.yml
+++ b/playbooks/base-server/3-setup-apps.yml
@@ -18,10 +18,8 @@
           - snapd
         state: latest
 
-### Installing Canonical-Livepatch snap
-    - name: Installing Canonical-LivePatch
-      community.general.snap:
-        name: canonical-livepatch
+    - name: Installing snap canonical-livepatch
+      command: sudo snap install canonical-livepatch
 
 ### this step is only for me coz I deploy docker Pi-Hole on all my servers
 ### PiHole need exclusive use of Port 53
