--- a/hosts.yml
+++ b/hosts.yml
@@ -45,12 +45,12 @@ us22192:
   hosts:
     192.168.8.128
   vars:
-#    ansible_user: morty
+    ansible_user: morty
     ansible_ssh_private_key_file: ~/.ssh/ansible
 
 us24192:
   hosts:
     192.168.8.121
   vars:
-#    ansible_user: test-user
+    ansible_user: test-user
     ansible_ssh_private_key_file: ~/.ssh/ansible
