--- a/hosts.yml
+++ b/hosts.yml
@@ -38,19 +38,35 @@ us2410:
   hosts:
     10.0.0.121
   vars:
-    ansible_user: test-user
+    # ansible_user: test-user
     ansible_ssh_private_key_file: ~/.ssh/ansible
+
+
+us221022222:
+  hosts:
+    10.0.0.128
+  vars:
+    # ansible_user: morty
+    ansible_ssh_private_key_file: ~/.ssh/ansible
+
+us241022222:
+  hosts:
+    10.0.0.121
+  vars:
+    # ansible_user: morty
+    ansible_ssh_private_key_file: ~/.ssh/ansible
+
 
 us22192:
   hosts:
     192.168.8.128
   vars:
-    ansible_user: morty
+    # ansible_user: test-user
     ansible_ssh_private_key_file: ~/.ssh/ansible
 
 us24192:
   hosts:
     192.168.8.121
   vars:
-    ansible_user: test-user
+    # ansible_user: test-user
     ansible_ssh_private_key_file: ~/.ssh/ansible
