modified path to inventory

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,4 @@
 [defaults]
-inventory  = /home/morty/ansible_control/hosts.yml
+inventory  = ~/ansible_control/hosts.yml
 interpreter_python = auto
 host_key_checking = False
