--- a/tasks/base-server/5-secure-ssh.yml
+++ b/tasks/base-server/5-secure-ssh.yml
@@ -1,7 +1,7 @@
 ---
 
 ### edit the sshd_config to configure sshkey login
-    - name: modifying sshd_config for sshkey login only
+    - name: sshd_config | modifying config file for publickey authentication only
       lineinfile: 
         path: /etc/ssh/sshd_config
         regexp: "{{ item.regexp }}"
@@ -22,7 +22,7 @@
 
 ### on Ubuntu distros above 22.04 ssh is being handled by ssh.socket
 ### in order to save changes to the sshd_config, a directory must first be created
-    - name: creating ssh.socket.d directory on distros above 22.04
+    - name: ssh.socket | creating directory on distros above 22.04
       file:
         dest: /etc/systemd/system/ssh.socket.d/
         state: directory
@@ -31,14 +31,14 @@
       when: ansible_lsb.release|int >= 22.05
 
 ### check SSH port before changes are made thru grepping and awking of ss -tulpn
-    - name: "checking default SSH port"
+    - name: "SSH Port | checking default port"
       shell: 
         cmd: "sudo ss -tulpn | grep ssh | awk 'FNR == 1 {print $5}' | awk -F: '{print $2}'"
       register: ssh_port_before
 
 ### after task above runs, an override.conf file must be created
 ### the override.conf file incorporates the variable for {{ ssh_stream }} as desired SSH port
-    - name: creating override.conf on distros above 22.04 for desired SSH port 
+    - name: ssh.socket | creating override.conf on distros above 22.04 for desired SSH port 
       copy:
         dest: /etc/systemd/system/ssh.socket.d/override.conf
         content: |
@@ -59,34 +59,39 @@
       command: sudo systemctl enable ssh.service
       when: ansible_lsb.release|int >= 22.05
 
-### Jammy distro and below
-    - name: Restarting SSH service on distros <= 22.04
-      command: sudo systemctl restart ssh
-      when: ansible_lsb.release|int <= 22.04
-
-### Distro is greater than Jammy
-    - name: Restarting SSH service on distros > 22.04
-      command: sudo systemctl restart ssh.service
-      when: ansible_lsb.release|int >= 22.05
-
-    - name: UFW limit new SSH port
+    - name: UFW | adding rule for new SSH port
       ufw:
         rule: limit
         port: "{{ ssh_stream }}"
         proto: tcp
+
+### Jammy distro and below
+    - name: SSH | reloading service on distros <= 22.04
+      service: 
+        name: ssh
+        state: reloaded
+      when: ansible_lsb.release|int <= 22.04
+
+### Distro is greater than Jammy
+    - name: SSH | reloading service on distros > 22.04
+      service:
+        name: ssh.service
+        state: reloaded
+      when: ansible_lsb.release|int >= 22.05
     
     - name: Reloading UFW service
-      command: sudo ufw reload
+      ufw:
+        state: reloaded
 
-    - name: Checking process user for new SSH port
+    - name: SSH | checking new port number
       shell: 
         cmd: "sudo ss -tulpn | grep ssh | awk 'FNR == 1 {print $5}' | awk -F: '{print $2}'"
       register: ssh_port_after
 
-    - name: "Comparing SSH ports before and after"
+    - name: Comparing SSH ports before and after
       debug:
         msg: 
-        - "SSH default port: {{ ssh_port_before.stdout }}"
-        - "SSH desired port: {{ ssh_port_after.stdout }}"
+        - "SSH old port: {{ ssh_port_before.stdout }}"
+        - "SSH new port: {{ ssh_port_after.stdout }}"
         - "----------------------------------------------------------------------------"
         - "Be sure to reconfigure your hosts.yml file to point to the new port at {{ ssh_port_after.stdout }}"
