--- a/tasks/server-maintenance/apt-upgrade.yml
+++ b/tasks/server-maintenance/apt-upgrade.yml
@@ -1,7 +1,7 @@
 ---
 
     - name: Upgrade all packages to their latest version
-      become: yes
+      become: true
       ansible.builtin.apt:
        update_cache: yes
        upgrade: yes
