changed to command: sudo reboot

--- a/tasks/server-maintenance/server-reboot.yml
+++ b/tasks/server-maintenance/server-reboot.yml
@@ -2,4 +2,4 @@
 
     - name: Unconditionally reboot the machine with all defaults
       become: yes
-      ansible.builtin.reboot:
+      command: sudo reboot
