--- a/hosts.yml
+++ b/hosts.yml
@@ -46,3 +46,10 @@ us24192:
     192.168.8.121
   vars:
     ansible_ssh_private_key_file: ~/.ssh/ansible
+
+deb10:
+  hosts:
+    10.0.0.148
+  vars:
+    ansible_ssh_private_key_file: ~/.ssh/ansible
+    
