added debconf and debconf-utils packages

--- a/tasks/base-server/3-setup-apps.yml
+++ b/tasks/base-server/3-setup-apps.yml
@@ -12,6 +12,8 @@
           - awk
           - cron
           - curl
+          - debconf
+          - debconf-utils
           - fonts-powerline
           - fzf
           - git
