added tree package

--- a/tasks/base-server/3-setup-apps.yml
+++ b/tasks/base-server/3-setup-apps.yml
@@ -29,6 +29,7 @@
           - powerline
           - software-properties-common
           - sudo
+          - tree
           - wget
           - whois
           - unattended-upgrades
